--- a/src/app/developer-content/developer-content.component.scss
+++ b/src/app/developer-content/developer-content.component.scss
@@ -1,53 +1,114 @@
 @import './../ourVariables.scss';
-.developer-content{
-  font-family:$mainFont;
- &__status{
-  -webkit-box-shadow:$boxShadow;
+
+.developer-content {
+  font-family: $mainFont;
+
+  ::-webkit-scrollbar {
+    width: 12px;
+  }
+
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px $lightBlue;
+    border-radius: 10px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    box-shadow: inset 0 0 6px $lightBlue;
+  }
+
+  &__status {
+    -webkit-box-shadow: $boxShadow;
     -moz-box-shadow: $boxShadow;
-    box-shadow:$boxShadow;
- }
-}
-/////////////////////////////////////////////////////////////////////////////
- 
-    
-    .example-list {
-      border: solid 1px #ccc;
-      min-height: 60px;
-      background: white;
-      border-radius: 4px;
-      overflow: hidden;
-      display: block;
+    box-shadow: $boxShadow;
+    height: 80vh;
+    overflow-y: auto;
+
+    &-head {
+      background-color: $blue;
+      color: $white;
+      border-bottom-left-radius: 20px;
+      border-top-right-radius: 20px;
+      text-transform: capitalize;
     }
-    
-    .example-box {
-      padding: 20px 10px;
-      border-bottom: solid 1px #ccc;
-      color: rgba(0, 0, 0, 0.87);
+
+    &-task {
+      padding: 20px 10px 5px 10px;
       cursor: move;
-      background: pink;
-      font-size: 14px;
+      border-bottom-left-radius: 20px;
+      border-top-right-radius: 20px;
+      margin: 10px;
+
+      & mat-icon {
+        color: $orange;
+        cursor: pointer;
+      }
+
+      & i {
+        font-weight: $bold;
+      }
+      & .task-owner{
+        width:30px;
+        height:30px;
+        border-radius: 50%;
+        background-color: $orange;
+        display:flex;
+        align-items: center;
+        justify-content: center;
+        & span{
+          color:$white;
+          font-weight:$bold
+        }
+      }
+      & .bonus{
+        color:$orange;
+        font-weight:$bold
+      }
     }
-    
-    .cdk-drag-preview {
-      box-sizing: border-box;
-      border-radius: 4px;
-      box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-                  0 8px 10px 1px rgba(0, 0, 0, 0.14),
-                  0 3px 14px 2px rgba(0, 0, 0, 0.12);
+
+    &-task:nth-child(odd) {
+      background-color: $white;
     }
-    
-    .cdk-drag-placeholder {
-      opacity: 0;
+
+    &-task:nth-child(even) {
+      background-color: $lightBlue;
     }
-    
-    .cdk-drag-animating {
-      transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-    }
-    
-    .example-box:last-child {
-      border: none;
-    }
-    
-    .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
-      transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-    }
+  }
+}
+
+/////////////////////////////////////////////////////////////////////////////
+
+
+.example-list {
+  // border: solid 1px green;
+  min-height: 60vh;
+  background: white;
+  border-radius: 4px;
+  overflow: hidden;
+  display: block;
+}
+
+
+.cdk-drag-preview {
+  box-sizing: border-box;
+  border-radius: 4px;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+    0 8px 10px 1px rgba(0, 0, 0, 0.14),
+    0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.example-box:last-child {
+  border: none;
+}
+
+.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
