--- a/src/app/developer-content/developer-content.component.scss
+++ b/src/app/developer-content/developer-content.component.scss
@@ -21,11 +21,15 @@
     -webkit-box-shadow: $boxShadow;
     -moz-box-shadow: $boxShadow;
     box-shadow: $boxShadow;
+    border:1px solid $lightBlue;
+    border-radius: 20px;
     
-&-list{
-  height: 80vh;
-  overflow-y: auto;
-}
+
+    &-list {
+      height: 70vh;
+      overflow-y: auto;
+    }
+
     & .example-list {
       min-height: 60vh;
       background: white;
@@ -39,8 +43,9 @@
       background-color: $blue;
       color: $white;
       border-bottom-left-radius: 20px;
-      border-top-right-radius: 20px;
+      border-bottom-right-radius: 20px;
       text-transform: capitalize;
+      font-size: 15px;
     }
 
     &-task {
@@ -87,6 +92,33 @@
     &-task:nth-child(even) {
       background-color: $lightBlue;
     }
+
+    &-footer {
+      border-top-left-radius: 20px;
+      border-top-right-radius: 20px;
+      margin-top: 30px;
+      background-color: $lightBlue;
+
+      &-add {
+        width: 40px;
+        height: 40px;
+        margin: auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: 3px solid $white;
+        margin: 4px auto;
+        background-color: $blue;
+        position:relative;
+        bottom:10px;
+        border-radius: 5px;
+        cursor: pointer;
+        & mat-icon {
+          color: $white;
+        }
+      }
+
+    }
   }
 }
 
@@ -115,7 +147,7 @@
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
- .example-list{
-  height:80vh !important;
+.example-list {
+  height: 70vh !important;
   overflow-y: auto !important;
 }
