friends component created

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,11 +8,11 @@
   
 </ul> -->
 <app-navbar></app-navbar>
-<section>
 
-<app-sidebar></app-sidebar>
+
+<!-- <app-sidebar></app-sidebar> -->
 <router-outlet></router-outlet>
-</section>
+<app-friends></app-friends>
 <!-- <app-all-projects></app-all-projects> -->
 <!-- <app-admin-panel></app-admin-panel> -->
 <!-- <app-drag-timer></app-drag-timer> -->
