--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -1,89 +1,18 @@
 @import './../ourVariables.scss';
-// section {
-    // background-color:$blue;
-    // flex-direction: column;
-    // display:flex;
-    // padding:30px 0px 30px;
-    // border-top-right-radius:30px;
-    // position: relative;
-    // justify-content: space-evenly;
-    // height: 90%;
-    // width: 100%;
-// }
-// .btn-container{
-  // border-top-left-radius:20px;
-  // border-bottom-left-radius:20px;
-  // margin-left:30px;
-  // margin-bottom:10px;
-  // background-color:$blue;
-// }
-// .btn{
-  // border-top-left-radius:40px;
-  // border-bottom-left-radius:40px;
-  // padding:14px;
-  // width:100%;
-  // border:none;
-  // color:$white;
-  // background-color:$blue;
-  // font-size: 20px;
-// }
-// .btn-1{
-  //   border-top-left-radius:40px;
-  // border-bottom-left-radius:40px;
-  // padding:16px;
-  // width:100%;
-  // border:none;
-  // color:$blue;
-  // font-weight: $bold;
-  // background-color:$white;
-// }
 
-// .btn-container{
-//       position: relative;
-
-// }
-// .btn-container::after{
-  // border-bottom-right-radius:40px;
-  // background-color:$blue;
-  // top:0px;
-  // right:0px;
-  // content:'';
-  // display:block;
-  // width:100%;
-  // height:11%;
-  // z-index:1;
-  // position: absolute;
-// }
-// .btn-container::before{
-  // border-top-right-radius:40px;
-  // border-bottom-left-radius: 40px;
-  // background-color:$blue;
-  // bottom:0px;
-  // z-index:1;
-  // right:0px;
-  // content:'';
-  // display:block;
-  // width:100%;
-  // height:11%;
-  // position: absolute;
-// }
-// .sidebar{
-//   display: flex;
-//   height: 100%;
-//   align-items: flex-end;
-
-// }
 .aside{
   display: flex;
   height: 100%;
   align-items: flex-end;
+  position: relative;
+
   &-container{
     background-color:$blue;
     flex-direction: column;
     display:flex;
     border-top-right-radius:30px;
     position: relative;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     height: 90%;
     width: 100%;
     &__btn{
@@ -91,8 +20,9 @@
       border-bottom-left-radius:20px;
       margin-left:30px;
       margin-bottom:10px;
-      background-color:$blue;
       position: relative;
+      z-index: 1;
+
       &:hover &-link {
         transition: all 0.3s linear;
 
@@ -134,13 +64,10 @@
         width:100%;
         border:none;
         color:$white;
-        background-color:$blue;
         font-size: 20px;
         display: block;
         text-decoration: none;
         padding-left: 50px;
-
-        // text-align: center;
         
       }
     }
@@ -154,4 +81,21 @@
   color:$blue;
   font-weight: $bold;
   background-color:$white;
+}
+.aside-img{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  mix-blend-mode: lighten;
+  margin-bottom: 0;
+  height: 30%;
+
+}
+.aside-img img{
+  width: 100%;
+  height: 100%;
+  mix-blend-mode: lighten
+}
+.aside-container__btn:first-of-type{
+  margin-top: 50px;
 }
