--- a/src/app/create-project/create-project.component.html
+++ b/src/app/create-project/create-project.component.html
@@ -1,106 +1,103 @@
     
-    <!-- !!!!!!!!!!!!!!---------------  CREATE PROJECT FORM ---------------!!!!!!!!!!!!!!!!! -->
+<!-- --------------------------- Create Project ---------------------------- -->
 
-<form [formGroup]='projectForm' (ngSubmit)='createProject(projectForm)'>
+<section  class="createProject">
+    <form class="createProject-container" [formGroup]='projectForm' (ngSubmit)='createProject(projectForm)'>
 
-    <!-- !!!!!!!!!!!!!!--------------- Project Name  ---------------!!!!!!!!!!!!!!!!! -->
+<!-- ----------------------------- Name Input ------------------------------ -->
 
-    <div class="form-container__wrapper">
-        <label>Project Name:</label>
-        <input class="form-container__wrapper-input" formControlName="name" type="text" placeholder="Project Name">
+    <div class="createProject-container__wrapper">
+        <label class="createProject-container__wrapper-label">Project Name</label>
+        <input class="createProject-container__wrapper-input" formControlName="name" type="text" >
     </div>
 
-    <!-- !!!!!!!!!!!!!!--------------- Project Key  ---------------!!!!!!!!!!!!!!!!! -->
+<!-- ------------------------------ Key Input ------------------------------ -->
 
-    <div class="form-container__wrapper">
-        <label>Project Key:</label>
-        <input class="form-container__wrapper-input" formControlName="id" type="text" placeholder="Key Number"
+    <div class="createProject-container__wrapper">
+        <label class="createProject-container__wrapper-label">Project Key</label>
+        <input class="createProject-container__wrapper-input" formControlName="id" type="text"
             value={{projectsLength}} disabled>
     </div>
 
-    <!-- !!!!!!!!!!!!!!--------------- Project Privacy  ---------------!!!!!!!!!!!!!!!!! -->
+<!-- -------------------------- Privacy Selector --------------------------- -->
 
-    <div class="form-container__wrapper">
-        <label>privacy:</label>
+    <div class="createProject-container__wrapper">
+        <label class="createProject-container__wrapper-label">privacy</label>
         <select formControlName="privacy">
             <option value="private">Private</option>
             <option value="Public">Public</option>
         </select>
     </div>
+<!-- --------------------------- Color Selector ---------------------------- -->
 
-    <!-- !!!!!!!!!!!!!!--------------- Project Color  ---------------!!!!!!!!!!!!!!!!! -->
-
-    <div class="form-container__wrapper">
-        <label>Project Color:</label>
-        <select formControlName="color">
-            <option value="red" (change)='SelectColor($event)'>Red</option>
-            <option value="green">Green</option>
-            <option value="blue">Blue</option>
-        </select>
-    </div>
-
-    <!-- !!!!!!!!!!!!!!--------------- Project Description  ---------------!!!!!!!!!!!!!!!!! -->
-
-    <div class="form-container__wrapper">
-        <label>Project Description:</label>
-        <textarea formControlName="description"></textarea>
-    </div>
-
-    <!-- !!!!!!!!!!!!!!--------------- Project Next  ---------------!!!!!!!!!!!!!!!!! -->
-
-    <!-- <button type="button">Next</button> -->
-
-    <!-- !!!!!!!!!!!!!!--------------- Project Attachment  ---------------!!!!!!!!!!!!!!!!! -->
-
-    <div class="form-container__wrapper">
-        <label>Project Attachment:</label>
-        <input type="file" id="imageUpload" formControlName='attachment' (change)="readURL($event)" />
-        <!-- <img id="imagePreview" [src]="imageSrc"  #Datavalue /> -->
-        <!-- <input type="text" [value]="Datavalue.src" style="display: none;" /> -->
-    </div>
-
-    <!-- !!!!!!!!!!!!!!--------------- Project Start Date  ---------------!!!!!!!!!!!!!!!!! -->
-
-    <div class="form-container__wrapper">
-        <label>Project Start:</label>
-        <input type="date" formControlName="startDate">
-    </div>
-
-    <!-- !!!!!!!!!!!!!!--------------- Project End Date  ---------------!!!!!!!!!!!!!!!!! -->
-
-    <div class="form-container__wrapper">
-        <label>Project End:</label>
-        <input type="date" formControlName="endDate">
-    </div>
-
-    <!-- !!!!!!!!!!!!!!--------------- Project Assign to  ---------------!!!!!!!!!!!!!!!!! -->
-
-    <div class="form-container__wrapper">
-        <div class="profiles-container__search-form">
-            <label>Add From:</label>
-            <label>users::{{usersLength}}</label>
-            <input name="filterValue" placeholder="Search">
+        <div class="createProject-container__wrapper">
+            <label class="createProject-container__wrapper-label" >Project Color</label>
+            <select formControlName="color">
+                <option value="red" (change)='SelectColor($event)'>Red</option>
+                <option value="green">Green</option>
+                <option value="blue">Blue</option>
+            </select>
         </div>
-        <div *ngIf="users?.length > 0 ; else nousers">
-            <ul>
-                <li *ngFor="let item of users | search:filterValue" style="cursor: pointer;" (click)="selectUser($event,item)">
-                    {{item.name}} , {{item.email}}
-                </li>
-            </ul>
+
+<!-- ---------------------------- Descripition ----------------------------- -->
+
+        <div class="createProject-container__wrapper">
+            <label class="createProject-container__wrapper-label">Project Description</label>
+            <textarea formControlName="description"></textarea>
         </div>
-        <ng-template #nousers>
-            <h5>There are no items to lists</h5>
-        </ng-template>
-    </div>
 
-    <!-- !!!!!!!!!!!!!!--------------- Project Invite by Email ---------------!!!!!!!!!!!!!!!!! -->
+<!-- ----------------------------- Attachment ------------------------------ -->
 
-    <div class="form-container__wrapper">
-        <label>Invite by Email:</label>
-        <input type="email" formControlName="invitors">
-    </div>
+        <div class="createProject-container__wrapper">
+            <label class="createProject-container__wrapper-label" >Project Attachment</label>
+            <input type="file" id="imageUpload" formControlName='attachment' (change)="readURL($event)" />
+            <!-- <img id="imagePreview" [src]="imageSrc"  #Datavalue /> -->
+            <!-- <input type="text" [value]="Datavalue.src" style="display: none;" /> -->
+        </div>
 
-    <!-- !!!!!!!!!!!!!!--------------- submit Button ---------------!!!!!!!!!!!!!!!!! -->
+<!-- ----------------------------- Start Date ------------------------------ -->
 
-    <button type="submit">Create</button>
-</form>
+        <div class="createProject-container__wrapper">
+            <label class="createProject-container__wrapper-label" >Project Start</label>
+            <input type="date" formControlName="startDate">
+        </div>
+
+<!-- ------------------------------ End Date ------------------------------- -->
+
+        <div class="createProject-container__wrapper">
+            <label class="createProject-container__wrapper-label" >Project End</label>
+            <input type="date" formControlName="endDate">
+        </div>
+
+<!-- ------------------------------ Assign To ------------------------------ -->
+
+        <div class="createProject-container__wrapper">
+            <div class="profiles-container__search-form">
+                <label class="createProject-container__wrapper-label" >Search</label>
+                <!-- <p>users::{{usersLength}}</p> -->
+                <input class="createProject-container__wrapper-user" name="filterValue" >
+            </div>
+            <div *ngIf="users?.length > 0 ; else nousers">
+                <ul>
+                    <li *ngFor="let item of users | search:filterValue" style="cursor: pointer;" (click)="selectUser($event,item)">
+                        {{item.name}} , {{item.email}}
+                    </li>
+                </ul>
+            </div>
+            <ng-template #nousers>
+                <h5>There are no items to lists</h5>
+            </ng-template>
+        </div>
+
+<!-- ---------------------------- Invite Input ----------------------------- -->
+
+        <div class="createProject-container__wrapper">
+            <label class="createProject-container__wrapper-label" >Invite by Email</label>
+            <input type="email" formControlName="invitors">
+        </div>
+
+<!-- ---------------------------- Submit Button ---------------------------- -->
+
+        <button type="submit">Create</button>
+    </form>
+</section>
