--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,23 +1,38 @@
-<section class="login">
-    <div class="login-google">
+<section class="login-body">
+    <app-login-navbar></app-login-navbar>
 
-    </div>
-    <form class="login-container" [formGroup]="login" (ngSubmit)="onLogin(login)">
-        <mat-form-field class="login-container__wrapper">
-            <mat-label>Username or Email</mat-label>
-            <input matInput formControlName="emailOrUsername" type="text" class="login-container__wrapper-input">
-        </mat-form-field>
-        <!-- <div class="login-container__wrapper " matFormField> -->
-        <mat-form-field class="login-container__wrapper">
-            <mat-label>Enter your password</mat-label>
-            <input formControlName="password" matInput [type]="hide ? 'password' : 'text'" class="login-container__wrapper-input">
-            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-            <mat-icon class="hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-            </button>
-        </mat-form-field>
-        <!-- </div> -->
-        <div class="login-container__wrapper">
-            <button type="submit" mat-stroked-button>Login</button>
+    <section class="login container-fluid">
+        <div class="login-google">
+    <!--  -->
+        </div> 
+        <div class="row">
+            <div class="form-container col-lg-6 col-md-6 col-12">
+                <form class="login-container" [formGroup]="login" (ngSubmit)="onLogin(login)">
+                    <mat-form-field class="login-container__wrapper">
+                        <mat-label>Username or Email</mat-label>
+                        <input matInput formControlName="emailOrUsername" type="text" class="login-container__wrapper-input">
+                        <mat-icon class="login-container__wrapper-icon person">person</mat-icon>
+                    </mat-form-field>
+                    <!-- <div class="login-container__wrapper " matFormField> -->
+                    <mat-form-field class="login-container__wrapper">
+                        <mat-label>Enter your password</mat-label>
+                        <input formControlName="password" matInput [type]="hide ? 'password' : 'text'" class="login-container__wrapper-input">
+                        <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                        <mat-icon class="login-container__wrapper-icon hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                        </button>
+                    </mat-form-field>
+                    <!-- </div> -->
+                    <div class="login-container__wrapper">
+                        <button type="submit" class=" login-container__wrapper-btn btn btn-primary">Login</button>
+                    </div>
+                </form>
+            </div>
+            <div class="img-container col-lg-6 col-md-6 col-12">
+                <app-login-reg></app-login-reg>
+            </div>
         </div>
-    </form>
+        
+        
+    </section>
+
 </section>
