--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -1,77 +1,129 @@
-// .form{
-//     height: 90vh;
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//     background-repeat: no-repeat;
-//     background-position:right;
-//     background-image: url(../../../../shapelogin.svg);
-//     &-container{
-//         display: flex;
-//         flex-direction: row;
-//         flex-wrap: wrap;
-//         flex:0 1 50%;
-//         justify-content: center;
+@import '../ourVariables.scss';
+.register{
+  background-image: url('../../assets/imgs/register/signinBg.jpg');
+  background-size: cover;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: 0% 5rem;
+}
+.form {
+  &-container {
+    
+    padding-top:15rem ;
+    &__btns{
+      &-btn{
+      padding: 10px 30px;
+      font-size: 17px;
+      background-color: $lightBlue;
+      border-radius: $btnBorderRadius;     
+      box-shadow: $boxShadow;
+      margin-top: 25px;
+      border:none;
+      }
+    }
+    &__wrapper {
+      flex: 0 1 100%;
+      position: relative;
+      display: flex;
+      margin-bottom: 2.5rem;
+      
+      &-input__field{
+        width: 100%;
+        position: relative;
+      }
+      &-input {
+        width: 100%;
+        padding: 0.5rem 0.5rem;
+        border: none;
+        border-bottom: 1px solid $gray;
+        transition: all 0.2s ease-in-out;
+        background-color: transparent;
+        z-index: 2;
 
-//         &__wrapper{
-//             flex: 0 1 70%;
-//             position: relative;
-//             display: flex;
-//             margin-bottom: 2.5rem;
-//             &-input{
-//                 width: 100%;
-//                 padding: 0.5rem 0.5rem;
-//                 border: none;
-//                 border-bottom:#bbcfff  solid 1px;
-//                 transition:border-bottom 1s ;
-//                 &:focus{
-//                     outline: none;
-//                     border-bottom:  #192965 solid 1px;
-                    
-//                 }
-//                 &:hover{
-//                     border-bottom:  #192965 solid 1px;
-//                 }
-//             }
-//         }
-//         &__btns{
-//             flex : 0 1 40%;
-//             &-submit{
-//                 border: none;
-//                 border-radius: 30px;
-//                 padding: 1rem 2rem;
-//                 outline: none;
-//                 cursor: pointer;
-//             }
-//     }
-//         }
-// }
-// .form-container__wrapper-input-msg{
-//     border: none;
-//     background: none;
-//     position: absolute;
-//     right: 0;
-//     color:red;
-//     outline: none;
-//     cursor: pointer;
+        &:focus {
+          outline: none;
+          border-bottom: 2px solid $lightBlue;
+        }
+      }
+    }
 
-// }
-// .support{
-//     font-size: 20px;
-//     line-height: 2rem;
-// }
-// app-reg-animation{
-//     flex:0 1 50%
-// }
-// .not-valid-name{
-// position: absolute;
-// bottom:0;
-// padding:10px 0px 10px 20px;
-// z-index: 1;
-// color:red;
-// right: 0;
-// font-size: 10px;
-// bottom: -30px;
-// border: none;
-// text-align: end;
-// }
+    &__btns {
+      flex: 0 1 40%;
+      &-btn{
+        border: none;
+        border-radius: 30px;
+        padding: 1rem 2rem;
+        outline: none;
+        cursor: pointer;
+        &:hover{
+          color: $lightBlue;
+          background-color: $white;
+          border: 1px solid $lightBlue;
+          box-sizing: border-box;
+        }
+      }
+    }
+  }
+}
+
+label{
+  position: absolute;
+  bottom: 2%;
+  z-index: 1;
+  transition: all 0.2s ease-in-out;
+
+}
+.labelFocus{
+  bottom: 70%;
+  font-size: 12px;
+  color: $lightBlue;
+}
+.form-container__wrapper-input-msg {
+  border: none;
+  background: none;
+  position: absolute;
+  right: 0;
+  color: red;
+  outline: none;
+  cursor: pointer;
+
+}
+
+.support {
+  font-size: 20px;
+  line-height: 2rem;
+}
+
+app-reg-animation {
+  flex: 0 1 50%
+}
+
+.not-valid-name {
+  position: absolute;
+  bottom: 0;
+  padding: 10px 0px 10px 20px;
+  z-index: 1;
+  color: red;
+  right: 0;
+  font-size: 10px;
+  bottom: -30px;
+  border: none;
+  text-align: end;
+}
+
+
+//************  responsive  **************//
+
+
+@media only screen and (max-width: 770px) {
+  .register{
+    background-position: 30% 5rem;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .register{
+    background-image: url('../../assets/imgs/register/signinBgSmallScreen.jpg');
+    background-size: cover;
+    background-position: 0;
+  }
+}
