--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
     <!-- <app-navbar></app-navbar> -->
-    <router-outlet></router-outlet>
+    <!-- <router-outlet></router-outlet> -->
     <!-- <app-admin-panel></app-admin-panel> -->
     <!-- <app-drag-timer></app-drag-timer>
     <app-developer-content></app-developer-content> -->
