--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,298 @@
-<section class="home">
-    <section class="home-nav">
-        <nav class="home-nav__container">
-            <p class="home-nav__container-logo">TODO<span>LESS</span></p>
-    
+<main class="home container-fluid ">
+    <section class="home-headr">
+        <nav class="home-nav__container no-gutters">
+            <div class="home-nav__container-logo mt-5">
+                <a href="#" class=" mt-3">TODO<span>LESS</span></a>
+            </div>
+            <ul class=" no-gutters nav justify-content-end home-nav__container-list mt-5">
+
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">HOME</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">HOW IT WORK</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">ABOUT US</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">OUR FEATURES</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">OUR TEAM</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">CONTACT US</a>
+                </li>
+                <li class="nav-item">
+                    <a class="signin nav-link rounded-pill" href="#">Sign In</a>
+                </li>
+                <li class="nav-item">
+                    <a class="signup nav-link rounded-pill" href="#">Sign Up</a>
+                </li>
+            </ul>
         </nav>
+        <header class="home-headr__hero">
+            <div class="container">
+                <header class="home-header__hero-header">
+                    <h1>Welcome To <span>TODO less</span></h1>
+                </header>
+                <div class="home-header__hero-content mb-5">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio totam, nisi ratione
+                        debitis
+                        dolore odio enim perspiciatis
+                        veniam impedit omnis itaque nam tempora deserunt eligendi voluptatum, placeat laborum ex
+                        pariatur.</p>
+                </div>
+                <a class="started rounded-pill " href="#">Get Started</a>
+            </div>
+        </header>
     </section>
-</section>
+
+    <!-------------------How it Work------------------------->
+
+    <section class="home-work">
+        <div class="home-work__container container">
+            <div class="home-work__container-row row">
+                <div class="home-work__container-row-video col-md-6">
+                    <video width="100%" poster="../../assets/img/video-8.png" controls>
+                    </video>
+                </div>
+                <div class="home-work__container-row-content col-md-6">
+                    <h5>See Now</h5>
+                    <h3>How it Work</h3>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur recusandae architecto
+                        placeat voluptatum nesciunt in, pariatur ratione! Modi porro
+                        distinctio beatae delectus, cumque officia, tempora excepturi laborum, libero recusandae
+                        praesentium.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-------------------About Us------------------------->
+
+    <section class="home-about">
+        <div class="home-work__container container">
+            <div class="home-about__container-row row">
+                <div class="col-md-6">
+                    <div class="home-about__container-row-content">
+                        <h5>About Us</h5>
+                        <h3>What We Do</h3>
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur recusandae architecto
+                            placeat voluptatum nesciunt in, pariatur ratione! Modi porro
+                            distinctio beatae delectus, cumque officia, tempora excepturi laborum, libero recusandae
+                            praesentium.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="home-about-container-row-img">
+                        <img class="img-fluid" src="../../assets/img/about.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-------------------Our Features------------------------->
+
+    <section class="home-features">
+        <div class="home-features__container container">
+            <div class="home-features__container-header">
+                <h5>Our Features</h5>
+                <h3>What We Serve</h3>
+            </div>
+            <div class="home-features__container-row row">
+                <div class="col-md-9 container">
+                    <div class="row">
+                        <div class="home-features__container-row__item col-md-3">
+                            <span>
+                                <mat-icon aria-hidden="false" aria-label="Example list icon">list</mat-icon>
+                            </span>
+                            <h4>Task Managment</h4>
+                        </div>
+                        <div class="home-features__container-row__item col-md-3">
+                            <span> <span>
+                                    <mat-icon aria-hidden="false" aria-label="Example schedule icon">schedule</mat-icon>
+                                </span></span>
+                            <h4>Time Managment</h4>
+                        </div>
+                        <div class="home-features__container-row__item col-md-3">
+                            <span>
+                                <mat-icon aria-hidden="false" aria-label="Example event_note icon">event_note</mat-icon>
+                            </span>
+                            <h4>Planning</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-------------------Our Team------------------------->
+
+    <section class="home-team">
+        <div class="home-team_img container-fluid">
+            <div class="row">
+                <img src="../../assets/img/team1.png" alt="" class="img-fluid">
+            </div>
+        </div>
+        <div class="container">
+            <div class="home-team__header">
+                <h5>Meet Us</h5>
+                <h3>Our Team</h3>
+            </div>
+            <div class="home-team__header-row__item row">
+                <div class="home-team__header-row__item col-md-4">
+                    <div class="home-team__item-img">
+                        <img src="../../assets/img/ali.jpg" alt="" class="rounded-circle img-fluid">
+                        <div class="home-team__item-content">
+                            <h4>ALi Emam</h4>
+                            <h5>Front End Developer</h5>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="home-team__header-row__item col-md-4">
+                    <div class="home-team__item-img">
+                        <img src="../../assets/img/mai.jpg" alt="" class="rounded-circle img-fluid">
+                        <div class="home-team__item-content">
+                            <h4>Mai Mohamed</h4>
+                            <h5>Front End Developer</h5>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="home-team__header-row__item col-md-4">
+                    <div class="home-team__item-img">
+                        <img src="../../assets/img/moahmed.jpg" alt="" class="rounded-circle img-fluid">
+                        <div class="home-team__item-content">
+                            <h4>Mohamed Elsaied</h4>
+                            <h5>Front End Developer</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-8-md">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="home-team__item-img">
+                                <img src="../../assets/img/nada.jpeg" alt="" class="rounded-circle img-fluid">
+                            </div>
+                            <div class="home-team__item-content">
+                                <h4>Nada Yousry</h4>
+                                <h5>Front End Developer</h5>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="home-team__item-img">
+                                <img src="../../assets/img/omnia.png" alt="" class="rounded-circle img-fluid">
+                            </div>
+                            <div class="home-team__item-content">
+                                <h4>Omnia Ahmed</h4>
+                                <h5>Front End Developer</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-------------------Footer------------------------->
+
+
+    <footer class="home-footer container-fluid">
+        <div class="home-footer__container">
+            <div class="home-footer__contaier_header row">
+                <form class="form-inline">
+                    <div class="form-group mx-sm-3 mb-2">
+                        <label for="Get Started Now" class="sr-only">Get Started Now</label>
+                        <input type="email" class="form-control" placeholder="Email Address">
+                    </div>
+                    <button type="submit" class="btn btn-primary mb-2">Subscribe</button>
+                </form>
+            </div>
+            <div class="home-footer__container_content row">
+                <div class="home-footer__container_content-item col-md-3">
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">TODOLESS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">See It Now</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Our Team</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact US</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="home-footer__container_content-item col-md-3">
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">ABOUT</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">ABOUT US</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Partnership</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Our Team</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="home-footer__container_content-item col-md-3">
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">FEATURES</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Task Managment</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Time Managment</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Project Managment</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Planning</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="home-footer__container_content-item col-md-3">
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">CONTACT US</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Support</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link " href="#">Terms & Privacy</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Faq</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+</main>
