--- a/src/app/developer-content/developer-content.component.html
+++ b/src/app/developer-content/developer-content.component.html
@@ -58,7 +58,7 @@
                   <div>
                     <h2>{{item.name}}</h2>
                     <div class="pause">
-                      <p><i>Time:</i> {{result}}</p>
+                      <p><i>Time:</i> {{item.totalTime}}</p>
                       <p class="bonus"><i>bonus</i> {{finishedTaskTime}} </p>
                     </div>
                   </div>
