--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
+<app-profile></app-profile>
 <app-all-projects></app-all-projects>
 <app-friends></app-friends>
 
