--- a/src/app/edit-project/edit-project.component.html
+++ b/src/app/edit-project/edit-project.component.html
@@ -1,31 +1,48 @@
 <h3 class="text-center h2">Edit Project</h3>
 <form class="example-form">
-    <mat-form-field class="example-full-width">
-      <mat-label>Project Name</mat-label>
-      <input matInput placeholder="" value="">
+  <mat-form-field class="example-full-width">
+    <mat-label>Project Name</mat-label>
+    <input matInput placeholder="" value="" />
+  </mat-form-field>
+  <mat-form-field class="example-full-width">
+    <mat-label>Project Privacy</mat-label>
+    <input matInput placeholder="" value="" />
+  </mat-form-field>
+  <div class="example-full-width d-flex justify-content-between">
+    <mat-form-field>
+      <mat-label>Start Date</mat-label>
+      <input matInput [matDatepicker]="picker" />
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
-    <mat-form-field class="example-full-width">
-        <mat-label>Project Privacy</mat-label>
-        <input matInput placeholder="" value="">
-      </mat-form-field>
-      <div class="example-full-width d-flex justify-content-between">
-        <!-- <mat-form-field>
-          <input [matDatepicker]="myDatepicker">
-          <mat-datepicker #myDatepicker></mat-datepicker>
-        </mat-form-field> -->
-      </div>
-    <mat-form-field class="example-full-width">
-      <mat-label>Task Description</mat-label>
-      <textarea matInput placeholder=""></textarea>
+    <mat-form-field>
+      <mat-label>End Date</mat-label>
+      <input matInput [matDatepicker]="picker1" />
+      <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+      <mat-datepicker #picker1></mat-datepicker>
     </mat-form-field>
+  </div>
+  <mat-form-field class="example-full-width">
+    <mat-label>Task Description</mat-label>
+    <textarea matInput placeholder=""></textarea>
+  </mat-form-field>
 
-    <mat-form-field class="example-full-width">
+  <mat-form-field class="example-full-width">
     <mat-label>Assignee</mat-label>
-    <input type="text" matInput [formControl]="myControl" [matAutocomplete]="auto">
+    <input
+      type="text"
+      matInput
+      [formControl]="myControl"
+      [matAutocomplete]="auto"
+    />
     <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
-      <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-        {{option.name}}
+      <mat-option
+        *ngFor="let option of filteredOptions | async"
+        [value]="option"
+      >
+        {{ option.name }}
       </mat-option>
     </mat-autocomplete>
   </mat-form-field>
-  </form>
+  <button mat-button class="save-edit btn-info">Save</button>
+</form>
