--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -29,11 +29,10 @@
           </div>
         </li>
         <li>
-          <span class="title project-descrip-title"
-            >Project Description :
-          </span>
+          <span class="title project-descrip-title">Project Description :</span>
           <p>{{ project.description }}</p>
         </li>
+        
       </ul>
     </div>
     <div class="col-md-6">
