--- a/src/app/edit-project/edit-project.component.scss
+++ b/src/app/edit-project/edit-project.component.scss
@@ -1,10 +1,4 @@
-// Import a pre-built theme 
-// @import '~@angular/material/core/theming/prebuilt/deeppurple-amber';
-// Import your custom input theme file so you can call the custom-input-theme function 
-// @import '~angular-material-datepicker/src/datepicker/calendar.component.scss';
- 
-// Using the $theme variable from the pre-built theme you can call the theming function 
-// @include calendar-theme($theme);
+
 
 .example-form {
     /* min-width: 150px;
@@ -17,4 +11,9 @@
   }
   .example-half-width{
       width: 45%;
+  }
+
+  .save-edit{
+    position: relative;
+    left: 90%;
   }
