--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,9 @@
-app-navbar{}
-section{
-    background-color:#f0efef;
+// app-navbar{}
+// section{
+//     background-color:#f0efef;
 
-    display: flex;
-}
-app-sidebar{
-width: 17%;
-height: 100vh;
-}
+//     display: flex;
+// }
+// app-sidebar{
+// width: 17%;
+// }
