--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -2,7 +2,9 @@
   <section class="aside">
     <aside class="aside-container">
       <div class="aside-container__btn">
-        <a class="aside-container__btn-link" [routerLink]="[ '/path' ]" routerLinkActive="active">Profile</a>
+        <mat-icon>person_outline</mat-icon>
+        <a class="aside-container__btn-link" [routerLink]="[ '/path' ]" routerLinkActive="active">
+          Profile</a>
       </div>
       <div class="aside-container__btn">
       <a class="aside-container__btn-link" [routerLink]="[ '/path' ]" routerLinkActive="active">Project</a>
@@ -16,5 +18,4 @@
    
 
     </aside>
-    <figure class="aside-img"><img src="https://i.imgur.com/VN8CbT4.jpg"></figure>
   </section>
