--- a/src/app/ourVariables.scss
+++ b/src/app/ourVariables.scss
@@ -1,15 +1,12 @@
 
 $black:#333333;
-$white:#f0efef;
+$white:#f7f7f7;
 $blue:#192965;
-$lightBlue:#c6d9fa;
+$lightBlue:#2ca6ef;
 $orange:#fc6b10;
-// $black:#333333;
-// $white:#ffffff;
-// $lightBlue:#2ca6ef;
-// $blue:#192965;
-// $orange:#fc6b10;
 $gray:#999999;
+$green:#90c73e;
+$pureLight:#fff;
 $boxShadow:0px 6px 5px 0px rgba(245, 242, 245, 1);
 $mainFont:'Raleway';
 $light:300;
